ie bugs + icon settings + help shifting

--- a/root/webapp/app/styles/patientview/sass/ie.scss
+++ b/root/webapp/app/styles/patientview/sass/ie.scss
@@ -12,6 +12,12 @@
         min-height:25px;
     }
 
+    .nav-utils{
+        .help-item{
+            float:left;
+        }
+    }
+
     .historical-data .overlay{
         -ms-filter: "progid:DXImageTransform.Microsoft.gradient(enabled=false)";;
     }
